2006-11-28  Vladimir Prus  <vladimir@codesourcery.com>

	* mi/mi-cmd-var.c (mi_cmd_var_create): Fix cleanup
        handlers. Free expression.

2006-11-28  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/tm-linux.h (REALTIME_LO, REALTIME_HI): Do not define.
	* config/mips/tm-linux.h (REALTIME_LO, REALTIME_HI): Likewise.

	* config/rs6000/tm-rs6000ly.h (REALTIME_LO, REALTIME_HI): Move to ...
	* config/nm-lynx.h (REALTIME_LO, REALTIME_HI): ... here.

	* config/i386/nto.mh (NAT_FILE): Define.
	* config/i386/nto.mt (DEPRECATED_TM_FILE): Remove.
	* config/i386/tm-nto.h: Delete file.
	* config/tm-nto.h: Delete file.
	* config/nm-nto.h: New file.

	* Makefile.in (nto-tdep.o): Add dependency on $(objfiles_h).
	* nto-tdep.c: Include "objfiles.h" and <string.h>.

	* coff-solib.h (SOLIB_UNLOADED_LIBRARY_PATHNAME): Define as "".
	* xcoffread.c (read_xcoff_symtab): Initialize fcn_stab_saved.
	* config/rs6000/rs6000lynx.mt (TDEPFILES): Add xcoffread.o.

2006-11-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* dwarf2-frame.c (decode_frame_entry_1): Skip unknown augmentations
	without skipping the CIE.

2006-11-28  Vladimir Prus  <vladimir@codesourcery.com>

	Fetch varobj values from memory in a single place,
	and only fetch the values that are really needed.
	* varobj.c (struct varobj): Clarify comment.
	(my_value_equal): Remove.
	(install_new_value): New function.
	(type_of_child): Remove.
	(varobj_create): Use install_new_value.
	(varobj_set_value): Use value_contents_equal, not
	my_value_equal.
	(varobj_update): Use install_new_value.
	(create_child): Likewise. Inline type_of_child here.
	(value_of_child): Don't fetch the value.
	(c_value_of_root): Likewise.
	(c_value_of_variable): Likewise.
	(type_changeable): Improve comments.

2006-11-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* remote.c (struct remote_arch_state): Doc fix.
	(compare_pnums): New function.
	(init_remote_state): Only allocate packet_reg structures for raw