@@ -37,10 +37,10 @@
 #ifndef REALTIME_LO
 # if defined(__SIGRTMIN)
 #  define REALTIME_LO __SIGRTMIN
-#  define REALTIME_HI __SIGRTMAX
+#  define REALTIME_HI (__SIGRTMAX + 1)
 # elif defined(SIGRTMIN)
 #  define REALTIME_LO SIGRTMIN
-#  define REALTIME_HI SIGRTMAX
+#  define REALTIME_HI (SIGRTMAX + 1)
 # endif
 #endif
 
