@@ -1,3 +1,9 @@
+2006-11-28  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/nm-linux.h: Do not include <signal.h>.
+	(REALTIME_LO, REALTIME_HI): Do not define.
+	* signals/signals.c (REALTIME_HI): Fix off-by-one bug.
+
 2006-11-28  Vladimir Prus  <vladimir@codesourcery.com>
 
 	* mi/mi-cmd-var.c (mi_cmd_var_create): Fix cleanup
